<resources>
    <string name="app_name">Электрика</string>
    <string name="action_addtitle">Добавить</string>
    <string name="action_entr">Войти</string>
    <string name="action_regist">Регистрация</string>
    <string name="action_whatisstock">О Программе</string>
    <string name="activity_news_name">Детали новости</string>
    <string name="activity_online_engineer">Online инжинер</string>
    <string name="online_engineer_help">Справка online помощника</string>
    <string name="activity_documents">Документы</string>
    <string name="activity_diameter_cross_section_name">Диаметр-сечение</string>
    <string name="banner_ad_unit_id">ca-app-pub-1824716616997649/9306239811</string>
    <string name="action_settings">Настройки</string>
    <string name="calc_pdd_title">Калькулятор выбора УЗО</string>
    <string name="documents_description">МЫ ПОДГОТОВИЛИ РАСШИРЕННУЮ БАЗУ НОРМАТИВНЫХ ДОКУМЕНТОВ, КОТОРОЙ ВЫ МОЖЕТЕ СВОБОДНО ПОЛЬЗОВАТЬСЯ</string>
    <string name="calc_pdd_description">КАЛЬКУЛЯТОР РАСЧЁТА МИНИМАЛЬНОГО ЗНАЧЕНИЯ ДИФФЕРЕНЦИАЛЬНОГО ТОКА УЗО ДЛЯ СЕТИ 220В</string>
    <string name="calc_cross_section_description">РАСЧЕТ СООТНОШЕНИЯ ДИАМЕТРА КАБЕЛЯ К ПЛОЩАДИ ЕГО СЕЧЕНИЯ И НАОБОРОТ</string>
    <string name="online_engineer_description">ВЫ МОЖЕТЕ ЗАДАТЬ СВОЙ ВОПРОС СПЕЦИАЛИСТУ И МЫ ОТВЕТИМ ВАМ В САМОЕ БЛИЖАЙШЕЕ ВРЕМЯ. ДАННАЯ ФУНКЦИЯ НОСИТ СТАТУС "БЕТА".</string>
    <string name="title_more">ПОДРОБНЕЕ</string>
    <string name="message_request_success">Запрос успешно выполнен</string>
    <string name="title_amperage_power">Сила тока/мощность</string>
    <string name="title_amperage">Укажите силу тока, А:</string>
    <string name="title_power">Укажите мощность, кВт:</string>
    <string name="title_room_space">Площадь помещения</string>
    <string name="title_document">Документ</string>
    <string name="title_type_of_document">Тип документа</string>
    <string name="title_view_of_document">Вид документа</string>
    <string name="title_conductor_length">Укажите длину проводника, М:</string>
    <string name="title_pdd_result">Минимальное значение дифф. тока УЗО, мА</string>
    <string name="title_enter">Ввести</string>
    <string name="title_enter_text_below">Введите текст ниже</string>
    <string name="title_diameter">Диаметр</string>
    <string name="title_open">Открыть</string>
    <string name="title_send">Отправить</string>
    <string name="title_question">Вопрос</string>
    <string name="title_cross_section">Сечение</string>
    <string name="title_diameter_default">8.0 мм</string>
    <string name="title_introduce">Представьтесь</string>
    <string name="title_email_for_answer">E-Mail для ответа</string>
    <string name="title_cross_section_default">50 мм&#178;</string>
    <string name="title_empty_result">-</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cross_section_mm">%1$s мм</string>
    <string name="cross_section_square_mm">%1$d мм&#178;</string>
    <string name="content_description">content description</string>
    <string name="error_connection">Ошибка соединения</string>
</resources>
