<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_text_description"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/online_engineer_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/divider_margin"
                    android:paddingTop="@dimen/divider_margin"
                    android:text="@string/title_introduce"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/title_enter"
                    android:inputType="textPersonName"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/divider_margin"
                    android:paddingTop="@dimen/divider_margin"
                    android:text="@string/title_email_for_answer"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/title_enter"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/divider_margin"
                    android:paddingTop="@dimen/divider_margin"
                    android:text="@string/title_question"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_enter_text_below"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/divider_margin"
                android:padding="@dimen/item_padding"
                android:background="@color/bg_edit_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/enter_text" />

            <TextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/divider_margin"
                android:text="@string/title_send"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>