<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_text_description"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/calc_cross_section_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin"
                android:paddingTop="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/title_diameter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvDiameterValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_diameter_default"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/divider_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />

                <SeekBar
                    android:id="@+id/sbDiameter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="120"
                    android:progress="80"
                    android:progressDrawable="@drawable/seek_progress"
                    android:thumb="@drawable/seek_thumb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin"
                android:paddingTop="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_cross_section"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvCrossSectionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_cross_section_default"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/divider_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />

                <SeekBar
                    android:id="@+id/sbCrossSection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="113"
                    android:progress="50"
                    android:progressDrawable="@drawable/seek_progress"
                    android:thumb="@drawable/seek_thumb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>