<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_text_description"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/documents_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/divider_margin"
                    android:paddingTop="@dimen/divider_margin"
                    android:text="@string/title_type_of_document"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvTypeOfDocument"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/title_enter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/divider_margin"
                    android:paddingTop="@dimen/divider_margin"
                    android:text="@string/title_view_of_document"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvViewOfDocument"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:hint="@string/title_enter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/divider_margin"
                android:paddingLeft="@dimen/divider_margin"
                android:paddingRight="@dimen/divider_margin"
                android:paddingStart="@dimen/divider_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/divider_margin"
                    android:paddingTop="@dimen/divider_margin"
                    android:text="@string/title_document"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvDocument"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/title_enter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/enter_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/divider_margin"
                android:layout_marginLeft="@dimen/divider_margin"
                android:layout_marginStart="@dimen/divider_margin"
                android:background="@color/divider_calc" />


            <TextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/divider_margin"
                android:text="@string/title_open"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>